--- a/Blogs.Front/Pages/Counter.razor
+++ b/Blogs.Front/Pages/Counter.razor
@@ -1,12 +1,17 @@
-﻿@page "/counter"
+﻿@page "/meu-blog"
+@using Blogs.Front.Pages.Autenticacao
 
 <PageTitle>Counter</PageTitle>
 
-<h1>Counter</h1>
+<Autenticado>
 
-<p role="status">Current count: @currentCount</p>
+    <h1>Counter</h1>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    <p role="status">Current count: @currentCount</p>
+
+    <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+
+</Autenticado>
 
 @code {
     private int currentCount = 0;
