--- a/Blogs.Front/Pages/Home.razor
+++ b/Blogs.Front/Pages/Home.razor
@@ -1,7 +1,34 @@
 ﻿@page "/"
+@using Blogs.DTO.ControleAcessos
+@using Blogs.Front.Helpers
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+@if (principaisUsuarios is null)
+{
+    <p>Carregando...</p>
+}
+else
+{
+    <div>
+        @foreach (var usuario in principaisUsuarios)
+        {
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">@usuario.Nome</h5>
+                    <p class="card-text">@usuario.Apresentacao</p>
+                    <a href="/@usuario.Slug" class="btn btn-primary">Acessar</a>
+                </div>
+            </div>
+        }
+    </div>
+}
 
-Welcome to your new app.
+@code {
+    private IEnumerable<UsuarioDTO>? principaisUsuarios;
+
+    protected override async Task OnInitializedAsync()
+    {
+        principaisUsuarios = await ApiBackend.GetAsync<IEnumerable<UsuarioDTO>>("usuarios");
+    }
+}
