Criadas as funcionalidades básicas de postagem e criação de usuários

--- a/Blogs.Front/Pages/Autenticacao/Autenticado.razor
+++ b/Blogs.Front/Pages/Autenticacao/Autenticado.razor
@@ -1,7 +1,9 @@
 ﻿@inject IJSRuntime JS
 @inject NavigationManager Navigation
 
-@ChildContent
+<CascadingValue Value="Token">
+    @ChildContent
+</CascadingValue>
 
 @code {
     [Parameter]
