--- a/Blogs.Front/Pages/Home.razor
+++ b/Blogs.Front/Pages/Home.razor
@@ -13,10 +13,10 @@ else
     <div>
         @foreach (var usuario in principaisUsuarios)
         {
-            <div class="card" style="width: 18rem;">
+            <div class="card m-2" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">@usuario.Nome</h5>
-                    <p class="card-text">@usuario.Apresentacao</p>
+                    <p class="card-text">@((MarkupString)usuario.Apresentacao)</p>
                     <a href="/@usuario.Slug" class="btn btn-primary">Acessar</a>
                 </div>
             </div>
