--- a/Blogs.Front/Layout/MainLayout.razor
+++ b/Blogs.Front/Layout/MainLayout.razor
@@ -1,4 +1,6 @@
-﻿@inject IJSRuntime JS
+﻿@using System.Text.Json
+@using Blogs.DTO.ControleAcessos
+@inject IJSRuntime JS
 @inject NavigationManager Navigation
 
 @inherits LayoutComponentBase
@@ -12,6 +14,9 @@
         <div class="top-row px-4">
             @if(usuarioLogado)
             {
+                <span class="navbar-text m-2">
+                    Usuário: <strong>@nomeUsuario</strong>
+                </span>
                 <button class="btn btn-primary" @onclick="Logout">
                     Logout
                 </button>
@@ -34,6 +39,9 @@
     {
         var token = await JS.InvokeAsync<string>("localStorage.getItem", "token");
         usuarioLogado = !string.IsNullOrWhiteSpace(token);
+
+        var usuario = JsonSerializer.Deserialize<UsuarioDTO?>(await JS.InvokeAsync<string>("localStorage.getItem", "user"));
+        nomeUsuario = usuario?.Nome ?? string.Empty;
     }
 
     private void Logout(MouseEventArgs args)
@@ -44,5 +52,6 @@
         this.StateHasChanged();
     }
 
+    private string nomeUsuario = string.Empty;
     private bool usuarioLogado = false;
 }
